# political-data-lake

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
assets/: analytics_gazettes_metrics_ddl.sql  political-data-lake.drawio  raw_gazettes_ddl.sql  stage_gazettes_ddl.sql
catalog/: README.md  main.tf
diagrams/: political-data-lake.drawio
ingestion/: README.md  main.tf  querido_diario.py
ingestion/querido-diario-ingestor/: README.md  pyproject.toml
ingestion/querido-diario-ingestor/querido_diario_ingestor/: querido_diario.py
orchestration/: .env.example  Dockerfile  README.md  docker-compose.yaml  main.tf
orchestration/dags/: invoke_lambda_ingestion_dag.py  querido_diario_pipeline_dag.py  utils.py
orchestration/dags/querido_diario/: territories.py
platform/: main.tf
platform/catalog/: main.tf
platform/ingestion/: main.tf
platform/orchestration/: main.tf
processing/: README.md  main.tf
processing/scripts/: raw_to_stage.py  stage_to_analytics.py
storage/: README.md  main.tf
